--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "vue-function-api": "^2.0.6",
     "vue-router": "^3.0.1",
     "vuetify": "^2.0.1",
-    "vuetify-loader": "^1.3.0"
+    "vuetify-loader": "^1.3.0",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.0.0",
