--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
   "dependencies": {
     "@sentry/browser": "^5.4.3",
     "@sentry/integrations": "^5.4.2",
+    "@vue/composition-api": "^0.3.0",
     "ajv": "^6.5.4",
     "sass": "^1.21.0",
     "tslint-config-prettier": "^1.17.0",
     "vue": "^2.6.10",
-    "vue-function-api": "^2.0.6",
     "vue-router": "^3.0.1",
-    "vuetify": "^2.0.10",
+    "vuetify": "^2.0.14",
     "vuetify-loader": "^1.3.0",
     "vuex": "^3.1.1"
   },
